# mini-cursor-cli

./: README.md  project_roadmap.md  pyproject.toml
agent/: __init__.py  server.py
cli/: __init__.py  chat.py  client.py  main.py
merkle/: __init__.py  exceptions.py  node.py  tree.py
tests/: test_merkle_basic.py  test_merkle_tree.py
