[project]
name = "mini-cursor-cli"
version = "0.1.0"
description = "Mini-version of Cursor's architecture with Merkle trees for incremental indexing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "rich>=13.6.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6"
]

[project.scripts]
mini-cursor-cli = "cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.hatch.build.targets.wheel]
packages = ["agent", "cli", "merkle"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
